--- a/styles/contact.css
+++ b/styles/contact.css
@@ -25,6 +25,7 @@ a:hover { color: #b55200; }
 /* nav */
 
 nav {
+    z-index: 3;
     grid-area: nav;
     grid-template: auto / auto auto auto;
     background: #ffc73b;
@@ -94,44 +95,63 @@ nav #nav-social li {
     filter: drop-shadow(2px 2px 5px black);
 }
 
-/* content */
+/* callout */
 
-.content {
-    grid-area: content;
-    margin: 0 6.25%;
+#follow1 {
+    clear: both;
+    justify-self: left;
+    position: absolute;
+    margin-top: 6vw;
+    margin-left: 12%;
+    z-index: 2;
+}
+
+/* main */
+
+main {
+    grid-area: main;
+    position: static;
+    padding: 5vh 40px 0 40px;
+    background: #ffe7b3;
+    justify-self: center;
+}
+main .content {
+    justify-self: center;
+    background-color: #ffe7b3;
+    display: grid;
+    grid-template-rows: 10% 60%;
+    grid-template-columns: 45vw 22vw;
+}
+main .content #title {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    text-align: center;
+    font-size: 160%;
+    color: #b55200;
+}
+main .content #contactUs {
+    grid-row: 2 / 3;
+    grid-column: 1 /2;
+    justify-self: left;
     display: block;
-    background: white;
 }
-.content #container {
-    display: flex;
-    justify-content: center;
-    line-height: 165%;
-    padding: 50px 6.25%;
-    background: #ffe7b3
-    
+main .content #contactUs h2 {
+    margin-left: 14px;
 }
-.content #container ul {
-    background: white;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-around;
-    list-style: none;
-}
-.content #container ul li p {
-    display: flex;
-    align-content: center;
-    justify-content: center;
+main .content #contactus p {
+    padding-bottom: 24px;
+    margin-left: 14px;
     text-align: left;
-    width: 280px;
-    margin: 20px 0px
 }
-.content #container ul li iframe {
-    margin: 0 10px;
-}
-.content #container ul li img{
-    margin: 0;
+main .content #social {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    text-align: left;
+    align-self: center;
 }
 
 /* footer */
