--- a/styles/menu.css
+++ b/styles/menu.css
@@ -25,6 +25,7 @@ a:hover { color: #b55200; }
 /* nav */
 
 nav {
+    z-index: 3;
     grid-area: nav;
     grid-template: auto / auto auto auto;
     background: #ffc73b;
@@ -67,71 +68,112 @@ nav #nav-social li {
     margin: 0 .2em 0 0;
 }
 
-/* landing */
+/* callout */
 
-.landing {
-    grid-area: landing;
-    background-image: url(../images/coffee-and-donut.png);
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-}
-.landing #box {
-    display: block;
-    justify-content: center;
-    margin: 70vh auto auto auto;
-}
-.landing h1 {
-    display: block;
-    color: white;
-    text-align: center;
-    text-shadow: 2px 2px 5px black;
-}
-.landing img {
-    display: block;
-    margin: 5vh auto auto auto;
-    justify-content: center;
-    filter: drop-shadow(2px 2px 5px black);
+#funfact1 {
+    clear: both;
+    justify-self: left;
+    position: absolute;
+    margin-top: 6vw;
+    margin-left: 12%;
+    z-index: 2;
 }
 
-/* content */
+/* main */
 
-.content {
-    grid-area: content;
-    margin: 0 6.25%;
+main {
+    grid-area: main;
+    position: static;
+    padding: 5vh 40px 0 40px;
+    background: #ffe7b3;
+    align-self: center;
+    justify-self: center;
+}
+main .content {
+    justify-self: center;
+    background-color: #ffe7b3;
+    display: grid;
+    grid-template-rows: auto 70px auto;
+    grid-template-columns: 38vw 27vw;
+}
+main.content #ism-slider {
+    grid-row: 1 / 2;
+    grid-column: 1 /2;
+    justify-self: left;
     display: block;
-    background: white;
 }
-.content #container {
-    display: flex;
-    justify-content: center;
-    line-height: 165%;
-    padding: 50px 6.25%;
-    background: #ffe7b3
-    
-}
-.content #container ul {
-    background: white;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-around;
-    list-style: none;
-}
-.content #container ul li p {
-    display: flex;
-    align-content: center;
-    justify-content: center;
+main .content #information {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: white;
     text-align: left;
-    width: 280px;
-    margin: 20px 0px
+    align-self: center;
 }
-.content #container ul li iframe {
-    margin: 0 10px;
+main .content #information h2 {
+    margin-left: 14px;
 }
-.content #container ul li img{
-    margin: 0;
+main .content #information p {
+    padding-bottom: 24px;
+    margin-left: 14px;
+    text-align: left;
+}
+main .content #title {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    text-align: center;
+    font-size: 160%;
+    color: #b55200;
+}
+main .content #box {
+    position: static;
+    width: 65vw;
+    grid-row: 3 / 4;
+    grid-column: 1 /3;
+    display: block;
+}
+main .content #box #commentsection {
+    text-align: center;
+    margin-top: 1.5em;
+    margin-bottom: 2.5em;
+    background: white;
+}
+#names_label {
+    text-indent: -25.5em;
+}
+#subject_label {
+    text-indent: -25em;
+}
+#comments_label {
+    text-indent: -24em;
+}
+
+/* change these for form display */
+
+textarea {
+	resize: none;
+    border: none;
+    background: lightgray;
+    padding: 10px;
+    margin-bottom: 1em;
+    font-size: 90%;
+}
+
+#first_name, #last_name {
+	width: 212px;
+    height: 24px;
+}
+
+#subject {
+	width: 440px;
+    height: 24px;
+}
+
+#comment {
+	width: 440px;
+    height: 80px;
 }
 
 /* footer */
