--- a/styles/about.css
+++ b/styles/about.css
@@ -149,3 +149,7 @@ footer h6 {
     text-align: right;
     margin: 1.4em 1em 0em 0em;
 }
+footer h6 a:link {
+    text-decoration: underline;
+    color: #ffe7b3;
+}
