--- a/styles/contact.css
+++ b/styles/contact.css
@@ -99,10 +99,10 @@ nav #nav-social li {
 
 #follow1 {
     clear: both;
-    justify-self: left;
+    justify-self: right;
     position: absolute;
-    margin-top: 6vw;
-    margin-left: 12%;
+    margin-top: 750px;
+    margin-right: 14.7%;
     z-index: 2;
 }
 
@@ -111,7 +111,7 @@ nav #nav-social li {
 main {
     grid-area: main;
     position: static;
-    padding: 5vh 40px 0 40px;
+    padding: 2vh 70px 0 70px;
     background: #ffe7b3;
     justify-self: center;
 }
@@ -119,8 +119,8 @@ main .content {
     justify-self: center;
     background-color: #ffe7b3;
     display: grid;
-    grid-template-rows: 10% 60%;
-    grid-template-columns: 45vw 22vw;
+    grid-template-rows: 10% 18vh 18vh 18vh;
+    grid-template-columns: 35vw 22vw;
 }
 main .content #title {
     grid-row: 1 / 2;
@@ -130,28 +130,61 @@ main .content #title {
     color: #b55200;
 }
 main .content #contactUs {
-    grid-row: 2 / 3;
+    grid-row: 2 / 5;
     grid-column: 1 /2;
     justify-self: left;
-    display: block;
-}
-main .content #contactUs h2 {
-    margin-left: 14px;
-}
-main .content #contactus p {
-    padding-bottom: 24px;
-    margin-left: 14px;
-    text-align: left;
-}
-main .content #social {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
-    display: block;
-    height: 100%;
-    width: 100%;
     background-color: white;
-    text-align: left;
+    overflow-y: auto;
+}
+main .content #contactUs form {
+    margin: 14px 40px 14px 40px;
+}
+main .content #contactUs #text {
+    margin: 14px 100px 14px 40px;
+}
+main .content #twitter-big {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
     align-self: center;
+    justify-self: center;
+}
+main .content #instagram-big {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    align-self: center;
+    justify-self: center;
+}
+main .content #facebook-big {
+    grid-row: 4 / 5;
+    grid-column: 2 / 3;
+    align-self: center;
+    justify-self: center;
+}
+
+/* change these for form display */
+
+textarea {
+	resize: none;
+    border: none;
+    background: lightgray;
+    padding: 10px;
+    margin-bottom: 1em;
+    font-size: 90%;
+}
+
+#first_name, #last_name {
+	width: 212px;
+    height: 24px;
+}
+
+#email {
+	width: 300px;
+    height: 24px;
+}
+
+#birthday {
+	width: 100px;
+    height: 24px;
 }
 
 /* footer */
@@ -162,6 +195,7 @@ footer {
     background-color: #281200;
     margin: 0 0;
     height: 2.5em;
+    z-index: 4;
 }
 footer h6 {
     color: #ffe7b3;
