--- a/styles/about.css
+++ b/styles/about.css
@@ -68,71 +68,76 @@ nav #nav-social li {
     margin: 0 .2em 0 0;
 }
 
-/* landing */
+/* callout */
 
-.landing {
-    grid-area: landing;
-    background-image: url(../images/coffee-and-donut.png);
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-}
-.landing #box {
-    display: block;
-    justify-content: center;
-    margin: 70vh auto auto auto;
-}
-.landing h1 {
-    display: block;
-    color: white;
-    text-align: center;
-    text-shadow: 2px 2px 5px black;
-}
-.landing img {
-    display: block;
-    margin: 5vh auto auto auto;
-    justify-content: center;
-    filter: drop-shadow(2px 2px 5px black);
+#funfact2 {
+    clear: both;
+    justify-self: left;
+    position: absolute;
+    margin-top: 1200px;
+    margin-left: 87px;
+    z-index: 2;
 }
 
 /* content */
 
-.content {
-    grid-area: content;
-    margin: 0 6.25%;
-    display: block;
-    background: white;
+main {
+    grid-area: main;
+    position: static;
+    width: 1400px;
+    padding: 5vh 0 0 0;
+    background: #ffe7b3;
+    align-self: center;
+    justify-self: center;
+    overflow-y: visible;
 }
-.content #container {
-    display: flex;
+main .content {
+    margin: 0 50px;
     justify-content: center;
-    line-height: 165%;
-    padding: 50px 6.25%;
-    background: #ffe7b3
-    
+    display: grid;
+    grid-template-rows: 110px 1fr;
+    grid-template-columns: 600px 600px;
 }
-.content #container ul {
-    background: white;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-around;
-    list-style: none;
+main .content #title {
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+    width: 1400px;
+    background-color: #ffe7b3;
+    text-align: center;
+    font-size: 160%;
+    color: #b55200;
+    width: auto;
 }
-.content #container ul li p {
-    display: flex;
-    align-content: center;
+main .content #left-column {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    width: 100%;
+    height: 92%;
+    background-color: white;
+    margin-bottom: 100px;
+}
+main .content #left-column #bakery {
+    margin: 165px 75px 20px 75px;
+}
+main .content #left-column #left-text {
+    margin: 20px 75px 120px 75px;
+    line-height: 32px;
+}
+main .content #right-column {
     justify-content: center;
-    text-align: left;
-    width: 280px;
-    margin: 20px 0px
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    height: 92%;
+    width: 100%;
+    background-color: white;
+    margin-bottom: 100px;
 }
-.content #container ul li iframe {
-    margin: 0 10px;
+main .content #right-column #right-text {
+    margin: 120px 75px 20px 75px;
+    line-height: 32px;
 }
-.content #container ul li img{
-    margin: 0;
+main .content #right-column #bakery-fire {
+    margin: 20px 75px 120px 75px;
 }
 
 /* footer */
@@ -152,4 +157,12 @@ footer h6 {
 footer h6 a:link {
     text-decoration: underline;
     color: #ffe7b3;
+}
+
+/* different  sizes */
+
+@media (max-width: 1600px) {
+    #funfact2 {
+        display: none;
+    }
 }
