--- a/styles/location.css
+++ b/styles/location.css
@@ -83,11 +83,9 @@ nav #nav-social li {
 main {
     grid-area: main;
     position: static;
-    padding: 5vh 100px 12vh 100px;
+    padding: 0 100px;
     background: #ffe7b3;
-    align-self: center;
     justify-self: center;
-    overflow: hidden;
 }
 main .content {
     justify-self: center;
