--- a/styles/location.css
+++ b/styles/location.css
@@ -128,6 +128,7 @@ main .content #information p {
 main .content #map {
     grid-row: 2 / 4;
     grid-column: 2 / 4;
+    height: auto;
 }
 
 /* footer */
